[package]
name = "schemers"
version = "0.2.0"
description = "Scheme interpreter written in Rust!"
authors = ["remidebette <remi.debette@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/remidebette/schemers"
repository = "https://github.com/remidebette/schemers"

[dependencies]
rustyline = "6.2.0"
nom = "5.1.2"